# anonimizador

./: README.md  planilha_anonimizada.xlsx  pyproject.toml
anonimizador/: main.py
