[tool.poetry]
name = "anonimizador"
version = "0.1.0"
description = ""
authors = ["Marco Antônio <marco.netto@mjv.com.br> and Ygor Pereira <ygor.sa@mjv.com.br"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.8.2"
streamlit = "^1.39.0"
rich = "^13.9.2"


[build-system]gtrfnbhg
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
